Restructured files for better organization

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon --env-file=.env ./bin/www"
+    "start": "node -r dotenv/config ./config/server",
+    "devstart": "nodemon -r dotenv/config ./config/server"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
@@ -14,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.2",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.0"
   }
