--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,9 +31,11 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-input-emoji": "^5.7.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "reacy": "^1.0.0",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
