--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
@@ -31,9 +32,11 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-input-emoji": "^5.8.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "^5.0.1",
     "reacy": "^1.0.0",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
